# bm_linux

./: .gitignore  Cargo.toml  README.md  run.sh
c_linux/: Makefile  multithread.c
src/: main.rs  main_perf.rs  timing.rs
